--- a/200710_page1.html
+++ b/200710_page1.html
@@ -4,7 +4,7 @@
 	<title>Page 1</title>
 </head>
 <body>
-<form action="/200710_page2.html" target="_blank" method="get">
+<form action="200710_page2.html" target="_blank" method="get">
 	<label for="user_name">User Name:</label><br>
 	<input type="text" name="user_name"><br>
 	<label for="password">Password:</label><br>
